<resources>
    <string name="app_name">Food For Thought</string>
    <string name="moveExercise">Move item from one view to another</string>
    <string name="unit_label">Units</string>
    <string name="gender_label">Gender</string>
    <string name="age_label">Age</string>
    <string name="height_label">Height</string>
    <string name="weight_label">Weight</string>
    <string name="activity_label">Activity</string>
    <string name="reset_label">Clear screen</string>
    <string name="calculate_label">Calculate</string>
    <string name="history_label">View History</string>
    <string-array name="units_array">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="activity_array">
        <item>Sedentary</item>
        <item>Lightly active</item>
        <item>Moderately active</item>
        <item>Very active</item>
        <item>Extremely active</item>
    </string-array>

    <string name="title_activity_results">Results</string>
    <string name="bmr_label">BMR</string>
    <string name="tdee_label">TDEE</string>
    <string name="bmi_label">BMI</string>
    <string name="log_label">Save result</string>
    <string name="action_about">Help</string>
    <string name="action_profile">Edit Profile</string>
    <string name="title_activity_about_me">Help</string>
    <string name="aboutApp"><b><u>What is TDEE?</u></b>
        \nTDEE, total daily energy expenditure,
        is the amount of energy in calories you burn per day.
        TDEE is best calculated by factoring in your BMR, or basal metabolic rate, and your activity level.
        \n\n<b><u>What is BMR?</u></b>
        \nBMR is the amount of calories you would burn per day at rest, in other words eating less than this value could be dangerous.
        \n\n<b><u>What is BMI?</u></b>
        \nBody Mass Index (BMI) is a relationship between weight and height, which is used to categorize a person as underweight, normal weight, overweight.
        \n\n<b><u>What do the activity level mean?</u></b>
        \n<b>Sedentary</b> = Little or no Exercise/ desk job
        \n<b>Lightly Active</b> = Light exercise/ sports 1 – 3 days/ week
        \n<b>Moderately Active</b> = Moderate Exercise, sports 3 – 5 days/ week
        \n<b>Very Active</b> = Heavy Exercise/ sports 6 – 7 days/ week
        \n<b>Extremely Active</b> = Very heavy exercise/ physical job/ training 2 x/ day
    </string>

    <!--Add New Exercise Custom Dialog-->
    <string name="add_new_exercise">Add New Exercise</string>
    <string name="edit_exercise">Edit Exercise</string>
    <string name="hint_exercise_name">Name</string>
    <string name="hint_number_of_sets">Number of Sets</string>
    <string name="hint_reps_per_set">Reps per Set</string>
    <string name="hint_set_estimate_time">Set Estimate Time (in seconds)</string>
    <string name="hint_description">Description</string>

    <string name="view_code">View source code</string>
    <string name="tooMuch">Made with &#x2764; on planet Earth</string>
    <string name="title_activity_history">History</string>
    <string name="bmi_status">You are</string>
    <string name="tryingTo_label">Trying to</string>
    <string-array name="tryingTo_array">
        <item>Loose weight</item>
        <item>Gain weight</item>
        <item>Maintain weight</item>
    </string-array>


    <string name="tryingToMsg">PlaceHolder</string>
    <string name="date_label">Date</string>
    <string name="intake_label">Calories</string>
    <string name="action_delete_history">Delete history</string>
    <string name="action_export_history">Export history</string>
    <string name="user_label">User</string>
    <string name="update_button_label">Update Profile</string>
    <string name="activity_profile_title">Edit Profile</string>
    <string name="profile_fileName">com.cyberw01f.kalc.profile_data</string>
    <string name="unit_pref">unitPrefKey</string>
    <string name="gender_pref">genderPrefKey</string>
    <string name="age_pref">agePrefKey</string>
    <string name="height_pref">heightPrefKey</string>
    <string name="weight_pref">weightPrefKey</string>
    <string name="load_button_label">Load Profile</string>


    <!--Add Exercise To Workout Custom Dialog-->
    <string name="select_day">Select the Day</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <!--Add New Workout Routine Custom Dialog-->
    <string name="add_new_workout_routine">Add New Routine</string>
    <string name="edit_workout_routine">Edit Workout Routine</string>
    <string name="hint_workout_routine_name">Routine Name</string>

    <!--Add New Meal Category Custom Dialog-->
    <string name="add_new_meal_category">Add New Meal Category</string>
    <string name="edit_meal_category">Edit Meal Category</string>
    <string name="hint_meal_category_name">Meal Category</string>

    <!--Add New Meal Custom Dialog-->
    <string name="add_new_meal">Add New Meal</string>
    <string name="edit_meal">Edit Meal</string>
    <string name="hint_meal_name">Name</string>
    <string name="hint_proteins">Proteins</string>
    <string name="hint_carbs">Carbs</string>
    <string name="hint_fats">Fats</string>
    <string name="hint_calories">Calories</string>
    <string name="hint_ingredients">Ingredients</string>

    <!--Buttons-->
    <string name="add">Add</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="new_meal">New Meal</string>
    <string name="ok">OK</string>

    <string name="remove_item">Remove Item</string>
    <string name="move_item">Move item from one view to another</string>

    <!--LOGIN & REGISTRATION -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone Number</string>
    <string name="hint_password">Password</string>
    <string name="hint_rePassword">Confirm Password</string>

    <string name="err_empty_name">Name is blank</string>
    <string name="err_empty_email">Email is blank</string>
    <string name="err_empty_phone">Phone is blank</string>
    <string name="err_empty_password">Password is blank</string>
    <string name="err_empty_rePassword">Re-Password is blank</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="text_login">Login</string>
    <string name="text_no_account">No Account Yet?\u00A0</string>
    <string name="text_register_now">Register Now.</string>
    <string name="text_register">Register</string>
    <string name="text_forgot_pass">Forgot Password?</string>
    <string name="text_reset">Reset</string>
    <string name="text_logout">Logout</string>

    <string name="title_activity_home">Home</string>
    <string name="title_activity_edit_profile">Edit Profiley</string>

    <string name="profile_height">Height : </string>
    <string name="profile_weight">Weight :</string>
    <string name="profile_exp">Experience : </string>
    <string name="profile_body">Body Type : </string>
    <string name="profile_goal">Goal : </string>
    <string name="profile_noti">Notification : </string>

    <!--CONTACT-->
    <string name="add_contact">Save Contact</string>
    <string name="select_contact">Select Contact</string>
    <string name="create_group">Create Group</string>

    <!--CHAT-->
    <string name="add_new_contact">Add Contact</string>
    <string name="create_group_chat">Create Group Chat</string>
    <string name="edit_user_detail">Edit Contact Detail</string>
    <string name="hint_detail">New Detail</string>
    <string name="change">Change</string>
    <string name="remove">Remove</string>

    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_register">New user, tap here to register !</string>
    <string name="register">Register</string>

    <string name="user_successfully_added">User successfully added!</string>
    <string name="user_unable_to_add">Unable to add user!</string>
    <string name="adding_user_to_db">Adding user to database.</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait...</string>
    <string name="type_a_message">Type a message</string>

    <!-- This is an ad unit ID for a test ad. Replace with your own banner ad unit id. -->
    <string name="home_banner_ad_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="result_banner_ad_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="add_banner_ad_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>

    <!--splash-->
    <string name="splash_desc">Food For Thought</string>

    <!--Home-->
    <string name="about">Tentang</string>
    <string name="btn1">Analisa Tubuh Anda</string>
    <string name="btn2">Hitung Kalori Makanan</string>
    <string name="ask_back">Tekan lagi untuk keluar</string>

    <!--form_user-->
    <string name="analisa_tubuh">Analisa Tubuh</string>
    <string name="tinggi_badan">Tinggi Badan</string>
    <string name="title_activity_search_makanan">SearchMakanan</string>
    <string name="cm">cm</string>
    <string name="berat_badan">Berat Badan</string>
    <string name="kg">Kg</string>
    <string name="umur">Umur</string>
    <string name="tahun">Tahun</string>
    <string name="gender">Gender</string>
    <string name="aktivitas">Aktivitas</string>
    <string name="ringan">ringan</string>
    <string name="sedang">sedang</string>
    <string name="berat">berat</string>
    <string name="lanjut">lanjut</string>

    <!--result-->
    <string name="hasil_analisa">Hasil Analisa</string>
    <string name="kategori_tubuh">Kategori Tubuh</string>
    <string name="gemuk">Gemuk</string>
    <string name="normal">Normal</string>
    <string name="kurus">Kurus</string>
    <string name="kebutuhan_kalori">Kebutuhan kalori harian</string>
    <string name="bagikan">bagikan</string>
    <string name="body_cat_res">Hasil Analisis Tubuh Saya:</string>
    <string name="hitung_bla">Analisa tubuh anda sekarang !</string>
    <string name="share_title">Bagikan menggunakan..</string>

    <!--makanan-->
    <string name="hitung_kalori">Hitung Kalori</string>
    <string name="makanan_pokok">Makanan Pokok</string>
    <string name="lauk_pauk">Lauk Pauk</string>
    <string name="makanan_ringan">Jajanan</string>
    <string name="sayuran">Sayuran</string>
    <string name="siap_saji">Siap Saji</string>
    <string name="jml">jml</string>
    <string name="buah">Buah-buahan</string>

    <!--add-->
    <string name="tambah_makanan">Tambah Makanan</string>
    <string name="nama_makanan">Nama Makanan</string>
    <string name="kalori_per_gram">Kalori per Gram</string>
    <string name="tambahkan">tambahkan</string>
    <string name="tutup">Tutup</string>
    <string name="beratt">berat</string>
    <string name="cari_makanan">Cari Makanan</string>
    <string name="kembali">kembali</string>

    <string name="app_name_version" translatable="false">Apik 1.0</string>
    <string name="app_link" translatable="false">http://play.google.com</string>


</resources>
