<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="320dp"
    android:layout_height="600dp"
    android:orientation="vertical"
    android:background="@color/primary_green"
    tools:context=".WorkoutAndExercise.DietPlan.AddNewMealCustomDialog">

    <TextView
        android:id="@+id/add_new_meal_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textColor="@color/primary_white"/>

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@color/primary_green">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/meal_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="30"
                android:inputType="text"
                android:hint="@string/hint_meal_name"
                android:textColor="@color/primary_white"
                android:backgroundTint="@color/white_smoke"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/proteins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="3"
                android:inputType="text"
                android:hint="@string/hint_proteins"
                android:textColor="@color/primary_white"
                android:backgroundTint="@color/white_smoke"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/carbs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="4"
                android:inputType="text"
                android:hint="@string/hint_carbs"
                android:textColor="@color/primary_white"
                android:backgroundTint="@color/white_smoke"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/fats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="4"
                android:inputType="text"
                android:hint="@string/hint_fats"
                android:textColor="@color/primary_white"
                android:backgroundTint="@color/white_smoke"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/calories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="4"
                android:inputType="text"
                android:hint="@string/hint_calories"
                android:textColor="@color/primary_white"
                android:backgroundTint="@color/white_smoke"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/description_background"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="4dp"
            android:paddingTop="4dp"
            android:background="@drawable/add_new_exercise_description_border_white">

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingTop="7dp"
                android:maxLength="500"
                android:inputType="textMultiLine"
                android:hint="@string/hint_description"
                android:textColor="@color/primary_white"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:gravity="top"
                android:background="@null"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:background="@color/primary_green">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="105dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:text="@string/cancel"
            android:textColor="@color/primary_white"
            android:background="@color/colorPrimary"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/add_button"
            android:layout_width="105dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:clickable="true"
            android:text="@string/add"
            android:textColor="@color/primary_white"
            android:background="@color/colorPrimary"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

</LinearLayout>