<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_add_makanan"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mobilemocap.ahmadriza.apik.AddMakanan">
<TextView
    android:id="@+id/headerTambah"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:background="@color/colorPrimary"
    android:text="@string/tambah_makanan"
    android:gravity="center"
    android:textColor="@android:color/white"
    android:fontFamily="cursive"
    android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
    android:paddingTop="4dp"
    android:paddingBottom="8dp"
    android:elevation="4dp"
    />
    <LinearLayout
        android:id="@+id/viewNamaMakanan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/headerTambah"
        android:layout_marginTop="20dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        >
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_font_download_white_48dp"
            android:padding="2dp"
            />
        <EditText
            android:id="@+id/txtNewNama"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/nama_makanan"
            android:textColor="@color/grey"
            android:textColorHint="@color/hint"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/viewKaloriMakanan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/viewNamaMakanan"
        android:layout_marginTop="6dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        >
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_whatshot_white_48dp"
            android:padding="2dp"
            />
        <EditText
            android:id="@+id/txtNewKalori"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/kalori_per_gram"
            android:textColor="@color/grey"
            android:textColorHint="@color/hint"
            android:inputType="numberDecimal"
            />
    </LinearLayout>
    <Button
        android:id="@+id/btnNewMakanan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewKaloriMakanan"
        android:background="@drawable/button_accent"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/tambahkan"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:fontFamily="sans-serif-smallcaps"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        />

    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_view_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/add_banner_ad_id"
        >

    </com.google.android.gms.ads.AdView>
</RelativeLayout>
