<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_utama"
    android:padding="0dp"
    android:background="@android:color/background_light"
    tools:context=".Utama">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/bg_home_2"
        android:id="@+id/bg"
        android:padding="0dp"
        android:scaleType="fitCenter"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp" />

    <Button
        android:text="@string/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnAbout"
        android:layout_marginStart="16dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/button"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        />

    <Button
        android:id="@+id/btnCekKalori"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_above="@+id/ad_view"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="75dp"
        android:background="@drawable/button_primary"
        android:text="@string/btn1"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/home_banner_ad_id"
        >
    </com.google.android.gms.ads.AdView>


</RelativeLayout>