<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:padding="5dp">


    <TextView
        android:id="@+id/dialogTitle"
        android:text="New Chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_margin="5dp"/>

    <RadioButton
        android:id="@+id/optionSingleChat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:duplicateParentState="false"
        android:text="Single Chat"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <RadioButton
        android:id="@+id/optionGroupChat"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_group_chat"
        />








    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:background="@color/colorPrimary">

        <Button
            android:id="@+id/btCancel"
            android:layout_width="105dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:text="@string/cancel"
            android:textColor="@color/primary_white"
            android:background="@color/colorPrimary"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/btNext"
            android:layout_width="105dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:text="@string/next"
            android:textColor="@color/primary_white"
            android:background="@color/colorPrimary"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>







</LinearLayout>
